<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout

        android:id="@+id/relativeLayout2"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768">


        <ProgressBar

            android:id="@+id/progressbar"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"

            android:layout_centerVertical="true"

            android:visibility="gone" />


    </RelativeLayout>

    <Button

        android:id="@+id/buttonSignUp"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_margin="7dp"


        android:text="@string/sign_up"

        android:textAllCaps="false"

        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textViewLogin"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"

        android:layout_marginLeft="32dp"

        android:padding="15dp"

        android:text="@string/already_have_an_account_login"


        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <EditText

        android:id="@+id/editTextPassword"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:fontFamily="sans-serif"

        android:hint="@string/password"

        android:inputType="textPassword"

        android:paddingBottom="15dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText

        android:id="@+id/editTextEmail"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:fontFamily="sans-serif"

        android:hint="email"

        android:inputType="textEmailAddress"

        android:paddingBottom="15dp"

        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <LinearLayout

        android:id="@+id/linearLayout2"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>